--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,6 @@
 <h1>Vice Versa</h1>
 <p>Something</p>
-<form action="">
+<form action="{% url 'reverse' %}">
 <textarea name="vice-versa" rows="5" cols="60">
 Enter text here
 </textarea>
